Remove 2 strings from Settings that previously held the PSS backup/restore commands

--- a/PSS/PSS/Pages/Maintenance/Backups.razor
+++ b/PSS/PSS/Pages/Maintenance/Backups.razor
@@ -13,7 +13,10 @@
 @code{
 
     //TODO: backups are compressed t0 max level in zip files and each zip holds the whole library contents and the DB contents.
-
+    
+    //TODO
+    //https://superuser.com/a/434876
+    // Pages.Maintenance.Backups.databaseRestoreCommand = $"type \"{backupFolderPath}/PSS DB Backup.bak\" | \"C:/Program Files/PostgreSQL/14/bin/psql.exe\" \"host=localhost port=5432 dbname=PSS user=postgres password=Ph0t0s_Server\"";
 }
 
 @functions{
