Fix button icons

--- a/PSS/PSS/Pages/Settings.razor
+++ b/PSS/PSS/Pages/Settings.razor
@@ -66,7 +66,7 @@
 
     <div>
         <span class="header">Maintenance</span>
-        <button class="textBtn" title="Create and Restore Backups of PSS"><span class="material-icons-outlined">settings_backup_restore</span><a href="maintenance/backups">Backups</a></button>
+        <button class="textBtn" title="Create and Restore Backups of PSS"><span class="material-icons-outlined">restore</span><a href="maintenance/backups">Backups</a></button>
         <button class="textBtn" @onclick="@(() => { Directory.Delete(S.tmpFolderPath, true); Directory.CreateDirectory(S.tmpFolderPath); })"><span class="material-icons-outlined">folder_delete</span><span>Clear pss_tmp</span></button>
         <button title="Clear pss_tmp and Empty Trash" class="textBtn" @onclick="@FreeUpSpace"><span class="material-icons-outlined">folder_delete</span><span>Free Up Space</span></button>
         @if (!maintenanceLoaded)
