--- a/PSS/PSS/Pages/Maintenance/Backups.razor
+++ b/PSS/PSS/Pages/Maintenance/Backups.razor
@@ -24,6 +24,7 @@
             <div class="backup">
                 <span>@backup.Item2</span>
                 <span>@F.FormatBytes(backup.Item3)</span>
+                <button class="iconBtn" @onclick="@(() => RestoreBackup(backup.Item1))" title="Restore This Backup File"><span class="material-icons">restore</span></button>
                 <button class="iconBtn" @onclick="@(() => File.Delete(backup.Item1))" title="Delete This Backup File"><svg width="24px" height="24px" class="material-icons" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg></button>
             </div>
         }
@@ -45,7 +46,7 @@
             {
                 backups.Add(new ValueTuple<string, DateTime, long>
                 {
-                    Item1 = zipFile.Replace('\\', '/'),
+                    Item1 = zipFile,
                     Item2 = DateTime.Parse(Path.GetFileName(zipFile).Replace("PSS Backup", null).Replace(".zip", null).Replace(';', ':')),
                     Item3 = new FileInfo(zipFile).Length
                 });
@@ -55,19 +56,12 @@
         
         backups = backups.OrderByDescending(x => x.Item2).ToList(); //Sort it so newer backups appear first in the List.
     }
-
-    //TODO: backups are compressed t0 max level in zip files and each zip holds the whole library contents and the DB contents.
-    //TODO: while this is running have some big popup or something else that prevents user from navigating away from the page. Also have a status text for what it is working on rn, like creating zip, backing up DB, etc.
-    //TODO: display the size of each backup and each item would have its own restore/delete button. Button to delete all backups.
-
-    //TODO
-    //https://superuser.com/a/434876
-    // Pages.Maintenance.Backups.databaseRestoreCommand = $"type \"{backupFolderPath}/PSS DB Backup.bak\" | \"C:/Program Files/PostgreSQL/14/bin/psql.exe\" \"host=localhost port=5432 dbname=PSS user=postgres password=Ph0t0s_Server\"";
+    //TODO: when creating or restoring backup have some big popup or something else that prevents user from navigating away from the page. Also have a status text for what it is working on rn, like creating zip, backing up DB, etc.
 }
 
 @functions{
 
-    ///Create a backup .zip file of library and database on server.
+    ///Create a backup .zip file of library and database on server, and add the backup to the top of the page of  backups.
     private static void CreateBackup()
     {
         string dbBakPath = Path.Combine(S.libFolderPath, "PSS Backup.bak");
@@ -90,15 +84,43 @@
         process.Start(); //How to run this cmd without a password prompt: https://stackoverflow.com/a/62417775
         process.WaitForExit();
         
-        ZipFile.CreateFromDirectory(S.libFolderPath, zipFilePath, CompressionLevel.SmallestSize, true);
+        ZipFile.CreateFromDirectory(S.libFolderPath, zipFilePath, CompressionLevel.SmallestSize, false);
         File.Delete(dbBakPath);
+        
+        backups.Insert(0, new ValueTuple<string, DateTime, long>
+        {
+            Item1 = zipFilePath,
+            Item2 = DateTime.Parse(Path.GetFileName(zipFilePath).Replace("PSS Backup", null).Replace(".zip", null).Replace(';', ':')),
+            Item3 = new FileInfo(zipFilePath).Length
+        });
     }
 
     ///<summary>Restore PSS to this backup.</summary>
     ///<param name="zipFullPath">The full path to the zip file to restore PSS to.</param>
     private static void RestoreBackup(string zipFullPath)
     {
-        //TODO: Use Tasks/Threads for this, and have a popup so user can't navigate away from page. Make sure to make it clear the entire library will be restored to this point.
-        //TODO: Clear DB and pss_library, unzip this into pss_tmp, start copying stuff to pss_library and adding stuff to database.
+        //Clears the database.
+        C.Open();
+        using NpgsqlCommand cmd = new NpgsqlCommand("DROP TABLE IF EXISTS media CASCADE; DROP TABLE IF EXISTS albums CASCADE; DROP TABLE IF EXISTS album_entries CASCADE;", C.connection);
+        cmd.ExecuteNonQuery();
+        C.Close();
+        
+        //Restore pss_library.
+        if (Directory.Exists(S.libFolderPath)) Directory.Delete(S.libFolderPath, true);
+        ZipFile.ExtractToDirectory(zipFullPath, S.libFolderPath);
+        
+        //Restore the database from the .bak file.
+        Process process = new();
+        ProcessStartInfo startInfo = new()
+        {
+            WindowStyle = ProcessWindowStyle.Hidden,
+            WorkingDirectory = S.backupFolderPath,
+            FileName = "cmd.exe",
+            Arguments = $"/C type \"{Path.Combine(S.libFolderPath, "PSS Backup.bak")}\" | \"C:/Program Files/PostgreSQL/14/bin/psql.exe\" \"host=localhost port=5432 dbname=PSS user=postgres password=Ph0t0s_Server\""
+        };
+        process.StartInfo = startInfo;
+        process.Start();
+        process.WaitForExit();
+        File.Delete($"{S.libFolderPath}/PSS Backup.bak");
     }
 }
