--- a/PSS/PSS/Pages/Maintenance/Backups.razor
+++ b/PSS/PSS/Pages/Maintenance/Backups.razor
@@ -29,9 +29,13 @@
             </div>
         }
     </div>
+    
+    <ProgressPopUp @ref="progressPopUp" Message="hi" Visible="true" ShowProgressBar="true" ProgressBarMax="100" ProgressBarValue="30"/>
 }
 
 @code{
+
+    ProgressPopUp progressPopUp;
 
     ///Stores each backup's full path, date and time it was made, and its size in bytes.
     private static List<(string, DateTime, long)> backups;
@@ -39,7 +43,7 @@
     protected override void OnInitialized()
     {
         backups = new List<(string, DateTime, long)>();
-        
+
         foreach (string zipFile in Directory.GetFiles(S.backupFolderPath, "*.zip", SearchOption.AllDirectories))
         {
             try
@@ -52,11 +56,10 @@
                 });
             }
             catch (FormatException){}
-        }
-        
+            }
+
         backups = backups.OrderByDescending(x => x.Item2).ToList(); //Sort it so newer backups appear first in the List.
     }
-    //TODO: when creating or restoring backup have some big popup or something else that prevents user from navigating away from the page. Also have a status text for what it is working on rn, like creating zip, backing up DB, etc.
 }
 
 @functions{
