Add FontSize attribute, gave W/H default values, and lots of styling. Added gray overlay to prevent clicking other stuff

--- a/PSS/PSS/Pages/Maintenance/Backups.razor
+++ b/PSS/PSS/Pages/Maintenance/Backups.razor
@@ -30,7 +30,7 @@
         }
     </div>
     
-    <ProgressPopUp @ref="progressPopUp" Message="hi" Visible="true" ShowProgressBar="true" ProgressBarMax="100" ProgressBarValue="30"/>
+    <ProgressPopUp @ref="progressPopUp" Message="Lorem ipsum dolor sit amet, consectetur ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum" FontSize="22" Visible="true" ShowProgressBar="true" ProgressBarMax="100" ProgressBarValue="30"/>
 }
 
 @code{
