--- a/PSS/PSS/wwwroot/css/components/ProgressPopUp.css
+++ b/PSS/PSS/wwwroot/css/components/ProgressPopUp.css
@@ -1,4 +1,13 @@
-﻿#progressPopUp {
+﻿#popupBackground {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(72, 71, 71, 0.41);
+}
+
+#popupBackground > #progressPopUp {
     position: absolute;
     left: 50%;
     top: 50%;
@@ -7,4 +16,20 @@
     background-color: black;
     border: 2px solid white;
     border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    word-wrap: break-word;
+}
+
+#popupBackground > #progressPopUp > span {
+    text-align: center;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+#popupBackground > #progressPopUp > progress {
+    margin-top: 20px;
 }
