Visible attribute is no longer required

--- a/PSS/PSS/Shared/ProgressPopUp.razor
+++ b/PSS/PSS/Shared/ProgressPopUp.razor
@@ -10,7 +10,7 @@
 
 @code{
 
-    [Parameter, EditorRequired]
+    [Parameter]
     public bool Visible { get; set; }
     
     [Parameter, EditorRequired]
