Remove progress bar stuff because it was terrible and wasn't working and not worth my time

--- a/PSS/PSS/wwwroot/css/components/ProgressPopUp.css
+++ b/PSS/PSS/wwwroot/css/components/ProgressPopUp.css
@@ -28,8 +28,5 @@
     text-align: center;
     margin-left: 10px;
     margin-right: 10px;
-}
-
-#popupBackground > #progressPopUp > progress {
-    margin-top: 20px;
+    user-select: none;
 }
